# IronRDP

./: .gitignore  @codex.TODO.md  AGENTS.md  ARCHITECTURE.md  Cargo.toml  GEMINI.md  README.md  build.ps1  clippy.toml  codex.TODO.md  gateway.TODO.md  report.json  typos.toml
.cargo/: config.toml
.claude/context/: ironrdp-context-20260317.md  ironrdp-context-20260323.md  ironrdp-context-20260327.md
.claude/plans/: upstream-fork-integration-plan.md
.github/workflows/: ci.yml  nuget-publish.yml  windows-release.yml
crates/ironrdp/: Cargo.toml
crates/ironrdp-acceptor/: Cargo.toml
crates/ironrdp-acceptor/src/: connection.rs  credssp.rs  lib.rs
crates/ironrdp-ainput/: Cargo.toml
crates/ironrdp-async/: Cargo.toml
crates/ironrdp-blocking/: Cargo.toml
crates/ironrdp-bulk/: Cargo.toml
crates/ironrdp-bulk/src/ncrush/: mod.rs
crates/ironrdp-bulk/src/xcrush/: mod.rs
crates/ironrdp-cfg/: Cargo.toml
crates/ironrdp-cfg/src/: lib.rs
crates/ironrdp-client/: Cargo.toml  README.md  build.rs
crates/ironrdp-client-glutin/: Cargo.toml
crates/ironrdp-client/src/: app.rs  clipboard.rs  config.rs  lib.rs  main.rs  presentation.rs  rdp.rs  session_driver.rs  version.rs
crates/ironrdp-cliprdr/: Cargo.toml
crates/ironrdp-cliprdr-format/: Cargo.toml
crates/ironrdp-cliprdr-native/: Cargo.toml
crates/ironrdp-connector/: Cargo.toml
crates/ironrdp-connector/src/: legacy.rs
crates/ironrdp-core/: Cargo.toml
crates/ironrdp-displaycontrol/: Cargo.toml
crates/ironrdp-dvc/: Cargo.toml
crates/ironrdp-dvc-com-plugin/: Cargo.toml
crates/ironrdp-dvc-pipe-proxy/: Cargo.toml
crates/ironrdp-echo/: Cargo.toml
crates/ironrdp-egfx/: Cargo.toml
crates/ironrdp-error/: Cargo.toml
crates/ironrdp-futures/: Cargo.toml
crates/ironrdp-gateway/: Cargo.toml
crates/ironrdp-gateway/src/: auth.rs  config.rs  lib.rs  listener.rs  policy.rs  relay.rs  session.rs  static_policy.rs
crates/ironrdp-gateway/tests/: static_policy.rs
crates/ironrdp-glutin-renderer/: Cargo.toml
crates/ironrdp-graphics/: Cargo.toml
crates/ironrdp-graphics/src/zgfx/: compressor.rs
crates/ironrdp-input/: Cargo.toml
crates/ironrdp-mstsgu/: Cargo.toml
crates/ironrdp-pdu/: Cargo.toml
crates/ironrdp-pdu/src/gcc/: network_data.rs
crates/ironrdp-pdu/src/input/: fast_path.rs
crates/ironrdp-propertyset/: Cargo.toml
crates/ironrdp-rdcleanpath/: Cargo.toml
crates/ironrdp-rdpdr/: Cargo.toml
crates/ironrdp-rdpdr-native/: Cargo.toml
crates/ironrdp-rdpdr-native/src/: lib.rs
crates/ironrdp-rdpeusb/: Cargo.toml
crates/ironrdp-rdpeusb/src/: lib.rs
crates/ironrdp-rdpfile/: Cargo.toml
crates/ironrdp-rdpfile/src/: lib.rs
crates/ironrdp-rdpsnd/: Cargo.toml
crates/ironrdp-rdpsnd-native/: Cargo.toml
crates/ironrdp-rdpsnd-native/src/: cpal.rs
crates/ironrdp-replay-client/: Cargo.toml
crates/ironrdp-server/: Cargo.toml  README.md
crates/ironrdp-server/src/: lib.rs  server.rs  session_driver.rs
crates/ironrdp-session/: Cargo.toml  README.md
crates/ironrdp-session/src/: active_stage.rs  fast_path.rs
crates/ironrdp-str/: Cargo.toml
crates/ironrdp-str/src/: unframed.rs
crates/ironrdp-svc/: Cargo.toml
crates/ironrdp-svc/src/: lib.rs
crates/ironrdp-testsuite-core/src/: gcc.rs
crates/ironrdp-testsuite-core/tests/: propertyset.rs
crates/ironrdp-testsuite-extra/: Cargo.toml
crates/ironrdp-testsuite-extra/tests/: mod.rs
crates/ironrdp-tls/: Cargo.toml
crates/ironrdp-tokio/: Cargo.toml
crates/ironrdp/examples/: screenshot.rs
docs/: windows-native-install.md
ffi/: README.md
ffi/dotnet/Devolutions.IronRdp/: Devolutions.IronRdp.Build.props  Devolutions.IronRdp.csproj  Devolutions.IronRdp.targets  README.md
ffi/src/: log.rs  rdcleanpath.rs
ffi/src/connector/: config.rs  mod.rs
scripts/windows/: Deploy-IronRdpRemote.ps1  Install-IronRdpPackage.ps1  Invoke-HyperVE2ESuite.ps1  Invoke-HyperVInstallerTest.ps1  Invoke-HyperVLiveConnectTest.ps1  Invoke-IronRdpSmokeTest.ps1  New-IronRdpInstallers.ps1
xtask/: README.md
xtask/src/: bin_version.rs  check.rs  clean.rs  cli.rs  cov.rs  ffi.rs  macros.rs  main.rs  prelude.rs
(+21 files in other folders)
