[package]
name = "ironrdp-dvc"
version = "0.5.0"
readme = "README.md"
description = "DRDYNVC static channel implementation and traits to implement dynamic virtual channels"
edition.workspace = true
rust-version = "1.94"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[features]
default = []
std = ["ironrdp-core/std", "ironrdp-pdu/std", "ironrdp-svc/std", "slab/std", "tracing/std"]

[dependencies]
ironrdp-core = { path = "../ironrdp-core", version = "0.1", features = ["alloc"] } # public
ironrdp-svc = { path = "../ironrdp-svc", version = "0.6" } # public
ironrdp-pdu = { path = "../ironrdp-pdu", version = "0.7", features = ["alloc"] } # public
tracing = { version = "0.1", default-features = false, features = ["log"] }
slab = { version = "0.4", default-features = false }

[lints]
workspace = true

