[package]
name = "ironrdp-rdcleanpath"
version = "0.2.1"
readme = "README.md"
description = "RDCleanPath PDU structure used by Devolutions Gateway and related gateway integrations"
edition.workspace = true
rust-version = "1.94"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[dependencies]
der = { version = "0.7", features = ["alloc", "derive"] } # public

[lints]
workspace = true

