[package]
name = "ironrdp-svc"
version = "0.6.0"
readme = "README.md"
description = "IronRDP traits to implement RDP static virtual channels"
edition.workspace = true
rust-version = "1.94"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
test = false

[features]
default = []
std = ["ironrdp-core/std", "ironrdp-pdu/std"]

[dependencies]
ironrdp-core = { path = "../ironrdp-core", version = "0.1" } # public
ironrdp-pdu = { path = "../ironrdp-pdu", version = "0.7", features = ["alloc"] } # public
bitflags = "2.9"

[lints]
workspace = true

